--- a/README.ipynb
+++ b/README.ipynb
@@ -8,13 +8,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img style=\"float: left;\" src=\"examples/laneLines_thirdPass.jpg\" width=\"480\"  height=\"270\" alt=\"Combined Image\" style=\"max-width:100%;\">"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,14 +34,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the project directory you can find [Writeup](CarND_writeup_P1.html) document explaining the solution.  \n",
+    "In the project directory you can find [Writeup](CarND_writeup_P1.md) document explaining the solution.  \n",
     "\n",
-    "#### Project directory content:\n",
+    "### Project directory content:\n",
     "\n",
     "* [README.MD](README.MD) - this file\n",
     "* [CarND_writeup_P1.md](CarND_writeup_P1.md) ([.html](CarND_writeup_P1.html), [.ipynb](CarND_writeup_P1.ipynb)) - project writeup\n",
-    "* P1.md (.html, .ipynb) - the actual project code with the solution\n",
-    "* "
+    "* [P1.md](P1.md) ([.html](P1.html), [.ipynb](P1.ipynb)) - the actual project code with the solution\n",
+    "* *test_images/* - folder with the images to be tested\n",
+    "* *test_images_output/* - folder with output images after processing\n",
+    "* *test_videos/* - folder with videos to be tested\n",
+    "* *test_videos_output/* - folder with output videos after processing\n"
    ]
   },
   {
