--- a/README.ipynb
+++ b/README.ipynb
@@ -34,13 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the project directory you can find [Writeup](CarND_writeup_P1.md) document explaining the solution.  \n",
+    "In the project directory you can find [Writeup](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.md) document explaining the solution.  \n",
     "\n",
     "### Project directory content:\n",
     "\n",
-    "* [README.MD](README.MD) - this file\n",
-    "* [CarND_writeup_P1.md](CarND_writeup_P1.md) ([.html](CarND_writeup_P1.html), [.ipynb](CarND_writeup_P1.ipynb)) - project writeup\n",
-    "* [P1.md](P1.md) ([.html](P1.html), [.ipynb](P1.ipynb)) - the actual project code with the solution\n",
+    "* [README.MD](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/README.MD) - this file\n",
+    "* [CarND_writeup_P1.md](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.md) ([.html](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.html), [.ipynb](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.ipynb)) - project writeup\n",
+    "* [P1.md](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/P1.md) ([.html](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/P1.html), [.ipynb](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/P1.ipynb)) - the actual project code with the solution\n",
     "* *test_images/* - folder with the images to be tested\n",
     "* *test_images_output/* - folder with output images after processing\n",
     "* *test_videos/* - folder with videos to be tested\n",
@@ -48,13 +48,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** *NOTE:* ** Some HTML files and videos should downloaded before reading/playing"
+   ]
   }
  ],
  "metadata": {
