--- a/README.ipynb
+++ b/README.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** *NOTE:* ** Some HTML files and videos should downloaded before reading/playing"
+    "** *NOTE:* ** HTML files and videos should be downloaded or **git clone** [the project repository on GitHub](https://github.com/ek8203/CarND-LaneLines-P1) before reading/playing"
    ]
   }
  ],
