--- a/CarND_writeup_P1.ipynb
+++ b/CarND_writeup_P1.ipynb
@@ -81,9 +81,9 @@
    "source": [
     "* Testing the videos\n",
     "\n",
-    "After verifying the pipeline on the test images I included ***proc_img_pipe*** function call in the template function ***process_image*** to test it on the provided videos. The result output videos were save in the *\"test_videos_output/\"* directory (to be embedded after getting GitHub account)\n",
+    "After verifying the pipeline on the test images I included ***proc_img_pipe*** function call in the template function ***process_image*** to test it on the provided videos. The result output videos were save in the *\"test_videos_output/\"* directory.\n",
     "\n",
-    "As tested the Challenge video does not work with my pipeline \n"
+    "As tested the Challenge video does not work with my pipeline. I wish I have more time working on it. \n"
    ]
   },
   {
