--- a/README.ipynb
+++ b/README.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sefl-Driving Car Nanodegree Program. Term 1\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author: Efraim Kropp (efraim.kropp@flex.com)\n",
+    "\n",
+    "Date: 09/14/2017\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Project 1: Finding Lane Lines on the Road** "
    ]
   },
@@ -25,16 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we drive, we use our eyes to decide where to go. The lines on the road that show us where the lanes are act as our constant reference for where to steer the vehicle. \n",
-    "\n",
-    "In this project we automatically detect lane lines in images using [Python](https://www.python.org/) and [OpenCV](http://opencv.org/). We use [Jupiter Notebook](http://jupyter.org/) to write and execute [Python](https://www.python.org/) code and [Anaconda](https://docs.anaconda.com/) to configure the enviroment for running the code."
+    "When we drive, we use our eyes to decide where to go. The lines on the road that show us where the lanes are act as our constant reference for where to steer the vehicle. In this project we automatically detect lane lines in images using [Python](https://www.python.org/) and [OpenCV](http://opencv.org/). We use [Jupiter Notebook](http://jupyter.org/) to write and execute [Python](https://www.python.org/) code and [Anaconda](https://docs.anaconda.com/) to configure the enviroment for running the code."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the project directory you can find [Writeup](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.md) document explaining the solution.  \n",
+    "In the project directory you can find [CarND_writeup_P1.md](https://github.com/ek8203/CarND-LaneLines-P1/blob/master/CarND_writeup_P1.md) document explaining the solution.  \n",
     "\n",
     "### Project directory content:\n",
     "\n",
@@ -52,6 +68,26 @@
    "metadata": {},
    "source": [
     "** *NOTE:* ** HTML files and videos should be downloaded or **git clone** [the project repository on GitHub](https://github.com/ek8203/CarND-LaneLines-P1) before reading/playing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instructions for running the code on Windows\n",
+    "\n",
+    "1. Install [Python3](https://www.python.org/) and [Anaconda](https://docs.anaconda.com/)\n",
+    "2. Setup and activate *carnd-term1* environment. In the Anaconda Prompt go to your home directory and run commands:  \n",
+    " __git clone https://github.com/udacity/CarND-Term1-Starter-Kit.git   \n",
+    " cd CarND-Term1-Starter-Kit   \n",
+    " conda env create -f environment.yml   \n",
+    " activate carnd-term1\n",
+    " cd %homepath%__   \n",
+    "3. Get the project from Git:   \n",
+    " __git clone https://github.com/ek8203/CarND-LaneLines-P1\n",
+    " cd CarND-LaneLines-P1__\n",
+    "4. Launch *P1.ipynb* notebook:   \n",
+    " __jupyter notebook P1.ipynb__"
    ]
   }
  ],
