--- a/CarND_writeup_P1.ipynb
+++ b/CarND_writeup_P1.ipynb
@@ -24,7 +24,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,9 +42,14 @@
     "First I tested the pipeline process on the provided test images. I put the image filenames in a list to read them in a loop and simulate the pipeline. In the loop I was reading a image  from file and called a function ***proc_img_pipe*** to process the image.\n",
     "In the function I grayscaled the image and applied Gaussian filter to smooth the image. Then I detected the edges of the objects by applying Canny agrorithm. In order to isolate the lane lines on the road I mask out a region of interest by defining vertices that form a poligon mask on the image. I used the resulting masked image as an input for Hough transform that gave me an image of the lane lines as an output. The I blended the lines with the original image and save the result image as file in the output directory.\n",
     "\n",
-    "The below are tested images with the lines after processing:\n",
-    "\n",
-    "![Processed Images](files/P1_18_1.png)\n"
+    "The below are tested images with the lines after processing:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Processed Images](files/P1_18_1.png)"
    ]
   },
   {
@@ -94,9 +98,9 @@
     "\n",
     "My pipeline has few shortcomings.\n",
     "\n",
-    "First it does not work with the challenge video and it required additional effort and time to figure out how to fix the issues. \n",
+    "First, it does not work with the challenge video and it required additional effort and time to figure out how to fix the issues. \n",
     "\n",
-    "Second my extrapolation of the line is very rough and requires some more processing like averaging and filtering."
+    "Second, my extrapolation of the line is very rough and requires some more processing like averaging and filtering."
    ]
   },
   {
@@ -107,7 +111,9 @@
     "\n",
     "Possible improvement to my pipeline would be adding averaging and filtering in the ***draw_lines()*** function\n",
     "\n",
-    "Potencial improvement would be making modification to solve the challenge video issues. I guess the camera on the vehicle was a little off but have no idea how to approach that in the software. Maybe redefining the regeon in run-time could fix it but it sounds too soficticated to implement."
+    "Potencial improvement would be making modification to solve the challenge video issues. I guess the camera on the vehicle was a little off but have no idea how to approach that in the software. Maybe redefining the regeon in run-time could fix it but it sounds too soficticated to implement.\n",
+    "\n",
+    "Thanks [Udacity](https://www.udacity.com) for the exciting project and sorry for my mess - I will try to do better next time. I got the concept. Let's move forward."
    ]
   }
  ],
